syntax = "proto3";

package policyengine.v1;

option go_package = "github.com/llm-marketplace/policy-engine/api/proto/v1;policyenginev1";

import "google/protobuf/timestamp.proto";

// PolicyEngineService provides policy validation and compliance checking
service PolicyEngineService {
  // ValidateService validates a service against organizational policies
  rpc ValidateService(ValidateServiceRequest) returns (ValidateServiceResponse);

  // CheckAccess checks if a user can access a specific service
  rpc CheckAccess(CheckAccessRequest) returns (CheckAccessResponse);

  // ValidateConsumption validates a consumption request
  rpc ValidateConsumption(ValidateConsumptionRequest) returns (ValidateConsumptionResponse);

  // GetPolicy retrieves a specific policy by ID
  rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse);

  // ListPolicies lists all active policies
  rpc ListPolicies(ListPoliciesRequest) returns (ListPoliciesResponse);

  // CreatePolicy creates a new policy
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse);

  // UpdatePolicy updates an existing policy
  rpc UpdatePolicy(UpdatePolicyRequest) returns (UpdatePolicyResponse);

  // DeletePolicy deletes a policy
  rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse);

  // HealthCheck checks the health of the service
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Service validation request
message ValidateServiceRequest {
  string service_id = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  string provider_id = 5;
  string category = 6;
  ServiceEndpoint endpoint = 7;
  ServiceCompliance compliance = 8;
  ServiceSLA sla = 9;
  ServicePricing pricing = 10;
  repeated ServiceCapability capabilities = 11;
}

message ServiceEndpoint {
  string url = 1;
  string protocol = 2;
  string authentication = 3;
}

message ServiceCompliance {
  string level = 1;
  repeated string certifications = 2;
  repeated string data_residency = 3;
  bool gdpr_compliant = 4;
  bool hipaa_compliant = 5;
}

message ServiceSLA {
  double availability = 1;
  int32 max_latency = 2;
  string support_level = 3;
}

message ServicePricing {
  string model = 1;
  repeated PricingTier rates = 2;
  string currency = 3;
}

message PricingTier {
  string tier = 1;
  double rate = 2;
  string unit = 3;
  string description = 4;
}

message ServiceCapability {
  string name = 1;
  string description = 2;
}

message ValidateServiceResponse {
  bool compliant = 1;
  repeated PolicyViolation violations = 2;
  string policy_version = 3;
  google.protobuf.Timestamp validated_at = 4;
  ValidationMetadata metadata = 5;
}

message ValidationMetadata {
  int32 policies_evaluated = 1;
  int32 policies_passed = 2;
  int32 policies_failed = 3;
  int64 validation_duration_ms = 4;
}

message PolicyViolation {
  string policy_id = 1;
  string policy_name = 2;
  string severity = 3; // critical, high, medium, low
  string message = 4;
  string remediation = 5;
  string field = 6;
  string actual_value = 7;
  string expected_value = 8;
}

// Access check request
message CheckAccessRequest {
  string user_id = 1;
  string service_id = 2;
  string action = 3; // read, consume, publish, delete
  map<string, string> context = 4;
}

message CheckAccessResponse {
  bool allowed = 1;
  string reason = 2;
  repeated string required_permissions = 3;
  repeated string missing_permissions = 4;
}

// Consumption validation request
message ValidateConsumptionRequest {
  string consumer_id = 1;
  string service_id = 2;
  string request_payload = 3;
  map<string, string> headers = 4;
  ConsumptionContext context = 5;
}

message ConsumptionContext {
  string ip_address = 1;
  string user_agent = 2;
  string region = 3;
  map<string, string> metadata = 4;
}

message ValidateConsumptionResponse {
  bool allowed = 1;
  string reason = 2;
  repeated PolicyViolation violations = 3;
  ConsumptionLimits limits = 4;
}

message ConsumptionLimits {
  int64 max_tokens = 1;
  int64 max_requests_per_minute = 2;
  int64 max_requests_per_day = 3;
  double max_cost_per_request = 4;
}

// Policy management
message GetPolicyRequest {
  string policy_id = 1;
}

message GetPolicyResponse {
  Policy policy = 1;
}

message ListPoliciesRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3; // e.g., "type=data_residency" or "enabled=true"
  string order_by = 4;
}

message ListPoliciesResponse {
  repeated Policy policies = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message CreatePolicyRequest {
  Policy policy = 1;
}

message CreatePolicyResponse {
  Policy policy = 1;
  google.protobuf.Timestamp created_at = 2;
}

message UpdatePolicyRequest {
  string policy_id = 1;
  Policy policy = 2;
  repeated string update_mask = 3; // fields to update
}

message UpdatePolicyResponse {
  Policy policy = 1;
  google.protobuf.Timestamp updated_at = 2;
}

message DeletePolicyRequest {
  string policy_id = 1;
}

message DeletePolicyResponse {
  bool success = 1;
  google.protobuf.Timestamp deleted_at = 2;
}

message Policy {
  string id = 1;
  string name = 2;
  string description = 3;
  PolicyType type = 4;
  bool enabled = 5;
  string severity = 6; // critical, high, medium, low
  PolicyRule rule = 7;
  map<string, string> metadata = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  string version = 11;
}

enum PolicyType {
  POLICY_TYPE_UNSPECIFIED = 0;
  DATA_RESIDENCY = 1;
  COMPLIANCE = 2;
  SECURITY = 3;
  PRICING = 4;
  ACCESS_CONTROL = 5;
  RATE_LIMITING = 6;
  CONTENT_FILTERING = 7;
  DATA_CLASSIFICATION = 8;
}

message PolicyRule {
  oneof rule {
    DataResidencyRule data_residency = 1;
    ComplianceRule compliance = 2;
    SecurityRule security = 3;
    PricingRule pricing = 4;
    AccessControlRule access_control = 5;
    RateLimitingRule rate_limiting = 6;
  }
}

message DataResidencyRule {
  repeated string allowed_countries = 1;
  repeated string blocked_countries = 2;
  bool require_specification = 3;
  int32 minimum_locations = 4;
}

message ComplianceRule {
  repeated string required_certifications = 1;
  bool require_gdpr_compliance = 2;
  bool require_hipaa_compliance = 3;
  bool require_soc2_compliance = 4;
  string minimum_compliance_level = 5; // public, internal, confidential, restricted
}

message SecurityRule {
  bool require_https = 1;
  bool require_authentication = 2;
  repeated string allowed_authentication_types = 3;
  bool require_encryption_at_rest = 4;
  bool require_encryption_in_transit = 5;
  int32 minimum_tls_version = 6; // 12 = TLS 1.2, 13 = TLS 1.3
}

message PricingRule {
  double max_rate_per_token = 1;
  double max_rate_per_request = 2;
  bool require_free_tier = 3;
  double minimum_sla_for_enterprise = 4;
}

message AccessControlRule {
  repeated string allowed_user_roles = 1;
  repeated string blocked_user_ids = 2;
  bool require_approval = 3;
  repeated string allowed_ip_ranges = 4;
}

message RateLimitingRule {
  int64 max_requests_per_minute = 1;
  int64 max_requests_per_hour = 2;
  int64 max_requests_per_day = 3;
  int64 max_tokens_per_request = 4;
}

// Health check
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  map<string, string> details = 2;
  google.protobuf.Timestamp timestamp = 3;
}
